--- a/app/Dockerfile_dagster
+++ b/app/Dockerfile_dagster
@@ -15,6 +15,6 @@ ENV DAGSTER_HOME=/opt/dagster/dagster_home/
 
 RUN mkdir -p $DAGSTER_HOME
 
-COPY dagster.yaml workspace.yaml $DAGSTER_HOME
+COPY ./app/dagster.yaml ./app/workspace.yaml $DAGSTER_HOME
 
 WORKDIR $DAGSTER_HOME
