--- a/app/dagster.yaml
+++ b/app/dagster.yaml
@@ -25,7 +25,7 @@ run_storage:
   class: PostgresRunStorage
   config:
     postgres_db:
-      hostname: docker_example_postgresql
+      hostname: postgres
       username:
         env: DAGSTER_POSTGRES_USER
       password:
@@ -39,7 +39,7 @@ schedule_storage:
   class: PostgresScheduleStorage
   config:
     postgres_db:
-      hostname: docker_example_postgresql
+      hostname: postgres
       username:
         env: DAGSTER_POSTGRES_USER
       password:
@@ -53,7 +53,7 @@ event_log_storage:
   class: PostgresEventLogStorage
   config:
     postgres_db:
-      hostname: docker_example_postgresql
+      hostname: postgres
       username:
         env: DAGSTER_POSTGRES_USER
       password:
