--- a/app/Dockerfile_dagster
+++ b/app/Dockerfile_dagster
@@ -1,14 +1,15 @@
 # Dagster libraries to run both dagit and the dagster-daemon. Does not
 # need to have access to any pipeline code.
 
-FROM python:3.7-slim
+FROM python:3.10-slim
 
 RUN pip install \
     dagster \
     dagster-graphql \
     dagit \
     dagster-postgres \
-    dagster-docker
+    dagster-docker \
+    dagster-webserver
 
 # Set $DAGSTER_HOME and copy dagster instance and workspace YAML there
 ENV DAGSTER_HOME=/opt/dagster/dagster_home/
@@ -18,3 +19,7 @@ RUN mkdir -p $DAGSTER_HOME
 COPY ./app/dagster.yaml ./app/workspace.yaml $DAGSTER_HOME
 
 WORKDIR $DAGSTER_HOME
+
+EXPOSE 3000
+
+ENTRYPOINT ["dagster-webserver", "-h", "0.0.0.0", "-p", "3000"]
